[gd_scene load_steps=20 format=2]

[ext_resource path="res://data/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ControlPanel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/GameGui.gd" type="Script" id=3]
[ext_resource path="res://data/icons/button_clear.png" type="Texture" id=4]
[ext_resource path="res://data/icons/button_play.png" type="Texture" id=5]
[ext_resource path="res://data/icons/button_pause.png" type="Texture" id=6]
[ext_resource path="res://data/icons/button_step.png" type="Texture" id=7]
[ext_resource path="res://data/icons/button_reset.png" type="Texture" id=8]
[ext_resource path="res://data/icons/button_exit.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform vec4 btn_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
	COLOR = texture(TEXTURE, UV) * btn_color;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/btn_color = Plane( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 11 )
shader_param/btn_color = Plane( 1, 1, 1, 1 )

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform vec4 btn_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
	COLOR = texture(TEXTURE, UV) * btn_color;
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )
shader_param/btn_color = Plane( 1, 1, 1, 1 )

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/button_notes.png-7b8ca0366d61ace421df0b1b9b368d2d.stex"

[node name="GameGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -216, 118 )
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelNotes" type="Panel" parent="."]
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 1.0
margin_right = 191.0

[node name="LabelNotes" type="RichTextLabel" parent="PanelNotes"]
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = SubResource( 10 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="RichTextLabel" parent="PanelNotes"]
anchor_left = 0.2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = -20.0
margin_bottom = -10.0
theme = SubResource( 8 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlPanel" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 60.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReset" type="TextureButton" parent="ControlPanel"]
margin_right = 57.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="TextureButton" parent="ControlPanel"]
material = SubResource( 12 )
margin_left = 61.0
margin_right = 118.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPause" type="TextureButton" parent="ControlPanel"]
material = SubResource( 13 )
margin_left = 122.0
margin_right = 179.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStep" type="TextureButton" parent="ControlPanel"]
margin_left = 183.0
margin_right = 240.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="TextureButton" parent="."]
material = SubResource( 15 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 60.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClear" type="TextureButton" parent="."]
material = SubResource( 15 )
margin_right = 60.0
margin_bottom = 60.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNotes" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -60.0
margin_right = 60.0
texture_normal = SubResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
